--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
     {{ template "hero" }}
 
     <section class="artists">
-        <h2 class="title">Artists</h2>
+        <h2 class="title" id="artists">Artists</h2>
         <div class="buttons">
             {{ template "filter-btn" }}
             {{ template "search-holder" }}
