--- a/pages/profile.html
+++ b/pages/profile.html
@@ -7,7 +7,7 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="/static/styles/master.css">
         <link rel="stylesheet" href="/static/styles/profile.css">
-        <script src="/static/scripts/main.js" defer></script>
+        <script type="module" src="/static/scripts/main.js" defer></script>
     </head>
 <body>
     <section class="profile">
