add connection feature

--- a/pages/error.html
+++ b/pages/error.html
@@ -16,5 +16,6 @@
             <a class="error-back-btn" href="/">Go Back</a>
         {{ end }}
     </div>
+    <script type="module" src="/static/scripts/main.js"></script>
 </body>
 </html>
